Upgraded to tesseract4 and added some slight improvements to how images are sent to it

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,7 @@
             "name": "get_charms",
             "type": "python",
             "request": "launch",
-            "program":"extract_charms.py",
+            "program":"charm_extraction.py",
             "console": "integratedTerminal"
         },
         {
