--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-    {
-        "name": "Node encoder",
-        "program": "${workspaceFolder}/js_encoder.js",
-        "request": "launch",
-        "skipFiles": [
-            "<node_internals>/**"
-        ],
-        "type": "pwa-node",
-        "args": ["charms.single.json"]
-    },
+        {
+            "name": "Node encoder",
+            "program": "${workspaceFolder}/js_encoder.js",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "pwa-node",
+            "args": [
+                "charms.single.json"
+            ]
+        },
         {
             "name": "Python: Current File",
             "type": "python",
@@ -23,25 +24,24 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "decompress",
+            "name": "Frame Extraction",
             "type": "python",
             "request": "launch",
-            "program":"mp4_decompress.py",
-            "console": "integratedTerminal"
+            "program": "main.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--skip-charms"
+            ]
         },
         {
-            "name": "get_charms",
+            "name": "Charm Extraction",
             "type": "python",
             "request": "launch",
-            "program":"charm_extraction.py",
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "masking",
-            "type": "python",
-            "request": "launch",
-            "program":"mp4_masking.py",
-            "console": "integratedTerminal"
+            "program": "main.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--skip-frames"
+            ]
         }
     ]
 }
