--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,28 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Node encoder",
-            "program": "${workspaceFolder}/js_encoder.js",
+            "name": "Python: Current File",
+            "type": "python",
             "request": "launch",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "type": "pwa-node",
-            "args": [
-                "charms.single.json"
-            ]
-        },
-        {
-            "name": "Node encoder",
-            "program": "${workspaceFolder}/js_encoder.js",
-            "request": "launch",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "type": "pwa-node",
-            "args": [
-                "charms.single.json"
-            ]
+            "program": "${file}",
+            "console": "integratedTerminal"
         },
         {
             "name": "Frame Extraction",
@@ -58,7 +41,6 @@
                 "--skip-frames",
                 "--frames",
                 "debug-frames"
-
             ]
         }
     ]
