implemented manual bindings for tesseract

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ converted.js
 !utsushis-charm*
 *.exe
 *.zip
-
+./*.png
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
