--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-inputs/*
-masked/*
-*frames/*
+*inputs*/*
+*frames*/*
 color_picker.py
 gray_scale_tester.py
 charms.encoded.txt
+charm.duplicates.txt
 converted.js
 *.pdn
 *.pyc
@@ -11,7 +11,7 @@ converted.js
 !utsushis-charm*
 *.exe
 *.zip
-
+./*.png
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
