--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Python: Current File",
             "type": "python",
@@ -12,13 +13,24 @@
             "console": "integratedTerminal"
         },
         {
+            "name": "Debug UI",
+            "type": "python",
+            "request": "launch",
+            "program": "main.py",
+            "console": "integratedTerminal",
+            "args": [
+                
+            ]
+        },
+        {
             "name": "Frame Extraction",
             "type": "python",
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
             "args": [
-                "--skip-charms"
+                "--skip-charms",
+                "--console"
             ]
         },
         {
@@ -28,7 +40,8 @@
             "program": "main.py",
             "console": "integratedTerminal",
             "args": [
-                "--skip-frames"
+                "--skip-frames",
+                "--console"
             ]
         },
         {
@@ -40,7 +53,8 @@
             "args": [
                 "--skip-frames",
                 "--frames",
-                "debug-frames"
+                "debug-frames",
+                "--console"
             ]
         }
     ]
