loading and copying correction files

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Python: Current File",
             "type": "python",
@@ -18,9 +17,7 @@
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
-            "args": [
-                
-            ]
+            "args": []
         },
         {
             "name": "Frame Extraction",
@@ -42,6 +39,19 @@
             "args": [
                 "--skip-frames",
                 "--console"
+            ]
+        },
+        {
+            "name": "Charm Extraction (French)",
+            "type": "python",
+            "request": "launch",
+            "program": "main.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--skip-frames",
+                "--console",
+                "-l",
+                "French"
             ]
         },
         {
