fixed directory creation and updated readme

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,9 @@
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
-            "args": []
+            "args": [
+                // "--reset",
+            ]
         },
         {
             "name": "Frame Extraction",
