--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
             "name": "Python: Current File",
             "type": "python",
@@ -20,6 +19,9 @@
             "console": "integratedTerminal",
             "args": [
                 // "--reset",
+                // "-i",
+                // "./inputs21:9"
+                // "./inputs21:9-copy"
             ]
         },
         {
